Require payment recipients to confirm settlements
